# blinks-api

./: .gitignore  Dockerfile  README.md  gunicorn.config.py  pyproject.toml  requirements.txt
backend/bookmarks/: apps.py  models.py  serializers.py  urls.py  views.py
backend/bookmarks/migrations/: 0001_initial.py
backend/categories/: models.py
backend/folders/: models.py
backend/notes/: choices.py  models.py
backend/users/: managers.py  models.py
backend/websites/: apps.py  models.py
backend/websites/migrations/: 0001_initial.py
core/: asgi.py  logger.py  models.py  settings.py  urls.py  wsgi.py
